--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="apple-touch-icon" href="/logo192.png" />
     <link rel="manifest" href="/manifest.json" />
     <title>React App</title>
-    <script defer="defer" src="/static/js/main.a925271f.js"></script>
-    <link href="/static/css/main.8dbaa738.css" rel="stylesheet">
+    <script defer="defer" src="./static/js/main.a925271f.js"></script>
+    <link href="./static/css/main.8dbaa738.css" rel="stylesheet">
 </head>
 
 <body><noscript>You need to enable JavaScript to run this app.</noscript>
